[package]
name = "Advent_of_code_2023"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc_lib"
path = "src\\lib.rs"

[[bin]]
name = "day01"
path = "src\\bin\\day01.rs"

[[bin]]
name = "day17"
path = "src\\bin\\day17.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
